Fixed h2 spacing on Projects Page

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -22,14 +22,14 @@ h1 {
 
 h2 {
   font-weight: 100;
-  letter-spacing: .60em;
+  letter-spacing: .20em;
   color: #353535;
   font-family: Roboto-Thin;
 }
 
 h3 {
   font-weight: 300;
-  letter-spacing: .10em;
+  letter-spacing: .60em;
   color: #353535;
   margin-bottom: 5px;
 }
