--- a/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
@@ -23,19 +23,19 @@
 }
 
 .category-1 {
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 .category-2 {
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 .category-3 {
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 .wistia_playlist {
-  margin-top: 60px;
+  margin-top: 20px;
 }
 
 /* The Form is on section1, About, Projects and Contact pages */
